force-app/main/default/objects/Activity/fields/Action_Required__c.field-meta.xml
<CustomField>
    <fullName>Action_Required__c</fullName>
    <description>Created for Inbound Comments CRM-7506</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Action Required</label>
    <type>TextArea</type>
</CustomField>