force-app/main/default/objects/Activity/fields/Activity_Number__c.field-meta.xml
<CustomField>
    <fullName>Activity_Number__c</fullName>
    <description>For internal reporting purposes</description>
    <displayFormat>T-{0000000}</displayFormat>
    <label>Activity Number</label>
    <type>AutoNumber</type>
</CustomField>