force-app/main/default/objects/Activity/fields/Call_Monitored__c.field-meta.xml
<CustomField>
    <fullName>Call_Monitored__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Monitored?</label>
    <type>Checkbox</type>
</CustomField>