force-app/main/default/objects/Activity/fields/Call_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Call_Outcome__c</fullName>
    <description>Created for Inbound Comments CRM-7506.</description>
    <label>Call Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FPO</fullName>
            </value>
            <value>
                <fullName>TER</fullName>
            </value>
            <value>
                <fullName>FCR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>