force-app/main/default/objects/Activity/fields/Created_Date_Time_System__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Time_System__c</fullName>
    <description>This field is accessible only for Admins. The field is created to capture the time of the record creation.</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date/Time [System]</label>
    <type>DateTime</type>
</CustomField>