force-app/main/default/objects/Activity/fields/IsTaskListed__c.field-meta.xml
<CustomField>
    <fullName>IsTaskListed__c</fullName>
    <formula>CONTAINS( $User.Id,  Owner:User.Id ) || CONTAINS( $User.Id, Owner:User.ManagerId )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsTaskListed</label>
    <type>Checkbox</type>
</CustomField>