force-app/main/default/objects/Activity/fields/KPI_Exclude__c.field-meta.xml
<CustomField>
    <fullName>KPI_Exclude__c</fullName>
    <formula>IF( CreatedBy.Division = &quot;CS - Qantas Inside Sales (07618)&quot; &amp;&amp; LastModifiedBy.UserRole.Name &lt;&gt; &quot;QF-DOM-Sales-SME-QIS-Operations&quot;, False, True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KPI Exclude</label>
    <type>Checkbox</type>
</CustomField>