force-app/main/default/objects/Activity/fields/Log_a_Call__c.field-meta.xml
<CustomField>
    <fullName>Log_a_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Log a Call</label>
    <type>Checkbox</type>
</CustomField>