force-app/main/default/objects/Activity/fields/migrated__c.field-meta.xml
<CustomField>
    <fullName>migrated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indicates whether task has been migrated from QUEST to SFDC</description>
    <label>migrated</label>
    <type>Checkbox</type>
</CustomField>