force-app/main/default/objects/Activity/fields/Modified_Date_Time_System__c.field-meta.xml
<CustomField>
    <fullName>Modified_Date_Time_System__c</fullName>
    <description>This field is accessible only for Admins. The field is created to capture the time of the record modification.</description>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modified Date/Time [System]</label>
    <type>DateTime</type>
</CustomField>