force-app/main/default/objects/Activity/fields/Number_of_Activities__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Activities__c</fullName>
    <description>This is used for Reporting</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Activities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>