force-app/main/default/objects/Activity/fields/Overdue__c.field-meta.xml
<CustomField>
    <fullName>Overdue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CRM-8328: 20 Aug PROD: Changes to OB call follow-up task</description>
    <label>Overdue</label>
    <type>Checkbox</type>
</CustomField>