force-app/main/default/objects/Activity/fields/Parent_Task_Subject__c.field-meta.xml
<CustomField>
    <fullName>Parent_Task_Subject__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Parent Task Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>