force-app/main/default/objects/Activity/fields/Parent_Task_Subjects__c.field-meta.xml
<CustomField>
    <fullName>Parent_Task_Subjects__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+Parent_Task_Id__c, Parent_Task_Subject__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Task Subject</label>
    <type>Text</type>
</CustomField>