force-app/main/default/objects/Activity/fields/Qantas_URL_s__c.field-meta.xml
<CustomField>
    <fullName>Qantas_URL_s__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CRM-8675 this look up is to link the Qantas Send link with email message record.</description>
    <label>Qantas URL&apos;s</label>
    <referenceTo>Qantas_URL_s__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>