force-app/main/default/objects/Activity/fields/QCC_Authentication_Status__c.field-meta.xml
<CustomField>
    <fullName>QCC_Authentication_Status__c</fullName>
    <description>ADT-8/AC2: Authentication Status values coming from IVR</description>
    <label>Authentication Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Authenticated</fullName>
            </value>
            <value>
                <fullName>Unauthenticated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>