force-app/main/default/objects/Activity/fields/QCC_Call_Reason__c.field-meta.xml
<CustomField>
    <fullName>QCC_Call_Reason__c</fullName>
    <description>ADT-8/AC1: Field Dependency in Activity object &gt; QCC_Call_Reason as the Controlling Field and Dependent Field is Classification QCC_Classification__c</description>
    <label>Call Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QCC_Call_Reason</valueSetName>
    </valueSet>
</CustomField>