force-app/main/default/objects/Activity/fields/QCC_Caller_Location__c.field-meta.xml
<CustomField>
    <fullName>QCC_Caller_Location__c</fullName>
    <description>ADT-8/AC1: Caller location information coming from Genesys.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Caller Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>