force-app/main/default/objects/Activity/fields/QCC_Caller_Phone__c.field-meta.xml
<CustomField>
    <fullName>QCC_Caller_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Caller Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>