force-app/main/default/objects/Activity/fields/QCC_Caller_Verified__c.field-meta.xml
<CustomField>
    <fullName>QCC_Caller_Verified__c</fullName>
    <description>Agent Desktop ADT-19/AC3: Update status when caller identity has been successfully verified.</description>
    <label>Caller Verified?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>