force-app/main/default/objects/Activity/fields/qcc_IVR_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>qcc_IVR_Phone_Number__c</fullName>
    <description>CRM-7928 This field is to store the original value of the Voice caller&apos;s number.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>IVR Phone Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>