force-app/main/default/objects/Activity/fields/QCC_PhoneCaller__c.field-meta.xml
<CustomField>
    <fullName>QCC_PhoneCaller__c</fullName>
    <description>ADT-8/AC1: Phone number of the caller. Values are coming from Genesys.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>