force-app/main/default/objects/Activity/fields/QCC_PNR__c.field-meta.xml
<CustomField>
    <fullName>QCC_PNR__c</fullName>
    <description>ADT-8/AC2: PNR values coming from IVR</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PNR</label>
    <length>100</length>
    <type>Text</type>
</CustomField>