force-app/main/default/objects/Activity/fields/QCC_Post_Call_Survey_Sent__c.field-meta.xml
<CustomField>
    <fullName>QCC_Post_Call_Survey_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post Call Survey Sent</label>
    <type>Checkbox</type>
</CustomField>