force-app/main/default/objects/Activity/fields/quest_sales_visit_date__c.field-meta.xml
<CustomField>
    <fullName>quest_sales_visit_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>quest sales visit date</label>
    <type>Date</type>
</CustomField>