force-app/main/default/objects/Activity/fields/Resolve_ActionId__c.field-meta.xml
<CustomField>
    <fullName>Resolve_ActionId__c</fullName>
    <description>QCC: This is to track migration job from Resolve.  This can be deleted once the migration job is completed from Resolve</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Resolve ActionID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>