force-app/main/default/objects/Activity/fields/Sales_Analytics__c.field-meta.xml
<CustomField>
    <fullName>Sales_Analytics__c</fullName>
    <description>For Sales Analytics dashboard</description>
    <formula>IF ( CONTAINS( Subject ,&quot;Sales Analytics&quot;),&quot;Yes&quot;, &quot;No&quot;)</formula>
    <label>Sales Analytics?</label>
    <type>Text</type>
</CustomField>