force-app/main/default/objects/Activity/fields/Score_Percent__c.field-meta.xml
<CustomField>
    <fullName>Score_Percent__c</fullName>
    <description>CRM-8354 : As per this story, created this new field</description>
    <label>Score Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>