force-app/main/default/objects/Activity/fields/Send_Qualtrics_Survey__c.field-meta.xml
<CustomField>
    <fullName>Send_Qualtrics_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>QBR accounts only where eligibility for survey is met</description>
    <inlineHelpText>QBR accounts only where eligibility for survey is met</inlineHelpText>
    <label>Send Qualtrics Survey</label>
    <type>Checkbox</type>
</CustomField>