force-app/main/default/objects/Activity/fields/Spoke_With__c.field-meta.xml
<CustomField>
    <fullName>Spoke_With__c</fullName>
    <description>Created for inbound comments CRM-7506.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Spoke With</label>
    <length>50</length>
    <type>Text</type>
</CustomField>