force-app/main/default/objects/Activity/fields/Summary_Comment_Id__c.field-meta.xml
<CustomField>
    <fullName>Summary_Comment_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Summary Comment Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>