force-app/main/default/objects/Activity/fields/Task_Status_Check__c.field-meta.xml
<CustomField>
    <fullName>Task_Status_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used this field in Process Builder(QIS KPI on task V6) to avoid multiple creation of QIS Sales Performance upon creation/Modification</description>
    <label>Task Status Check</label>
    <type>Checkbox</type>
</CustomField>