force-app/main/default/objects/Activity/fields/Task_type__c.field-meta.xml
<CustomField>
    <fullName>Task_type__c</fullName>
    <description>Created Freight Service for Inbound comment CRM-7891</description>
    <inlineHelpText>Freight: Users always need to select &quot;Freight&quot;</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contact to Customer</fullName>
            </value>
            <value>
                <fullName>Customer Feedback</fullName>
            </value>
            <value>
                <fullName>Customer Interaction</fullName>
            </value>
            <value>
                <fullName>Customer Journey Operations</fullName>
            </value>
            <value>
                <fullName>Freight</fullName>
                <default>true</default>
                <label>Freight</label>
            </value>
            <value>
                <fullName>Freight Service</fullName>
            </value>
            <value>
                <fullName>Future Planet</fullName>
            </value>
            <value>
                <fullName>General Note</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
            <value>
                <fullName>Market Intel/Headlines/Feedback</fullName>
            </value>
            <value>
                <fullName>DPP</fullName>
                <label>QDP</label>
            </value>
            <value>
                <fullName>Request information from Other airline</fullName>
            </value>
            <value>
                <fullName>Request information from Thirdparty</fullName>
            </value>
            <value>
                <fullName>Response from other Airline</fullName>
            </value>
            <value>
                <fullName>Response from other division</fullName>
            </value>
            <value>
                <fullName>Response from Thirdparty</fullName>
            </value>
            <value>
                <fullName>Risk</fullName>
            </value>
            <value>
                <fullName>SME Callout</fullName>
            </value>
            <value>
                <fullName>Strategic Account Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>