force-app/main/default/objects/Activity/fields/TECH_Genesys_Participant_Id__c.field-meta.xml
<CustomField>
    <fullName>TECH_Genesys_Participant_Id__c</fullName>
    <description>The Genesys User Id of the user that accepted the call</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>TECH Genesys Participant Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>