force-app/main/default/objects/Activity/fields/TECH_Original_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>TECH_Original_Case_Id__c</fullName>
    <description>Captures the initial Case Id attached to the call log Task. This will be used to prevent the auto reparenting of call log when new case tab is opened which is due to OOTB behaviour in Genesys &quot;Enable Auto Association on Navigation&quot;.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>TECH Original Case Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>