force-app/main/default/objects/Activity/fields/Tiered_Conversation__c.field-meta.xml
<CustomField>
    <fullName>Tiered_Conversation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check for all activities related to contractual tiering</inlineHelpText>
    <label>Tiered Conversation</label>
    <type>Checkbox</type>
</CustomField>