force-app/main/default/objects/Activity/fields/Transfer_Note__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Note__c</fullName>
    <description>Capture Transfer Note in Call Data/Task-CRM-9224.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Transfer Note</label>
    <type>TextArea</type>
</CustomField>