force-app/main/default/objects/Activity/listViews/Introductory_Calls.listView-meta.xml
<ListView>
    <fullName>Introductory_Calls</fullName>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Team</filterScope>
    <filters>
        <field>TASK.STATUS</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>RShar</value>
    </filters>
    <filters>
        <field>TASK.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>2/1/2016 12:00 AM</value>
    </filters>
    <label>EK Project</label>
    <sharedTo>
        <roleAndSubordinatesInternal>QF_DOM_Sales_SME_QIS</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>